--- a/public/rule.html
+++ b/public/rule.html
@@ -43,6 +43,7 @@
     <div class="tab-content active" id="page1">
       <p>
         カードには強さを示す1〜10までの数字が書いてあります。<br>
+        ゲーム開始時、山札からランダムで1枚、転生札として、山札の側に配置されます<br>
         1〜8のカードは2枚ずつ、9と10のカードは1枚ずつあります（合計18枚）。<br>
         各ターン、2枚の手札のうち1枚を場に出して効果を発動します。<br>
         山札がない場合、カードを引く必要がある効果は発動できません。<br>
@@ -77,7 +78,9 @@
             <h2>カード2【探偵】</h2>
             <img src="./images/2.jpg" alt="少女カード画像" class="rule-image" />
             <h3>カード効果【粗探し】</h3>
-            <p>相手の手札を言い当てると相手は脱落する</p>
+            <p>相手の手札を言い当てると相手は脱落する
+              (ただしカード10の[彼女]を当てた場合は、当てられたプレイヤーは敗北せず、転生の処理を行う)
+            </p>
         </div>
 
         <div class="card-desc" id="card3">
@@ -125,7 +128,7 @@
             <h2>カード9【悪魔】</h2>
             <img src="./images/9.jpg" alt="少女カード画像" class="rule-image" />
             <h3>カード効果【悪魔】</h3>
-            <p>相手に山札から1枚引かせて手札を2枚とも公開させる。そしてどちらか1枚を捨てさせる</p>
+            <p>相手に山札から1枚引かせて手札を2枚とも公開させる。そしてどちらか1枚を選び、捨てさせる</p>
         </div>
 
         <div class="card-desc" id="card10">
