--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="HΛLPΛL">
   <meta name="application-name" content="HΛLPΛL">
-  
+  <link rel="stylesheet" href="./styles/index.css">
   <style>
     #rooms {
         display: flex;
